@@ -1,0 +1,25 @@
+//
+// Type: pt824
+//
+// Comment: Should work with PT824A/B/C.
+// Status: supported
+// Credit: By superelchi (thx olderzeus)
+// Date: 2012-11-24
+// Url: http://item.taobao.com/item.htm?id=9197767508
+// Url: http://www.longmatech.com/index.php/product/PT824A.html
+// Url: http://www.longmatech.com/index.php/product/PT824A.html
+// Url: http://lucy89.en.made-in-china.com/product/RbUxXeCrhvcJ/China-Christmas-Gifts-Digital-Photo-Frame-PT824b.html
+// Url: http://konsun.appliances-china.com/Product_Look.php?ID=100077
+// Url: http://www.corpmarket.com/sell/2-4inch-digital-photo-frame-PT824C-detail-1245-747967.html
+// Url: http://www.gongchang.com/2_4_inch_color_LCD_display_PT824C_digital_picture_viewer_heart_shaped-dp621446/
+// 
+// The CRCs identify.py detected - in the form "OpenWin CRC", "Init(Tbl) CRC"
+// CRC: 0x1dac2801, 0xe9ddf006
+//
+// 
+#define LCD_320x240
+#define LCD_CONTROLLER_CUSTOM
+#define LCD_DEFAULT_CONTRAST_VALUE 6
+#define LCD_DEFAULT_BRIGHTNESS_VALUE 20
+// No useful info for user contrast adjust
+//#define LCD_USER_ADJUSTABLE_CONTRAST 1
